deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx

spec:
  replicas: 3

  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      labels:
        app: nginx

    spec:
      containers:
      - name: nginx
        image: nginx

        ports:
        - containerPort: 80

        resources:
          requests:
            cpu: "100m"
            memory: "64Mi"

          limits:
            cpu: "200m"
            memory: "128Mi"
